# walletmgr

./: .gitignore  README.md  go.mod  pyproject.toml  taskfile.yml
cmd/walletmgr-app-backend/: main.go
conn/grpc/: models.pb.go  models_pb2.py  service_internal.pb.go  service_internal_pb2.py  service_internal_pb2.pyi  taskfile.yml
conn/grpc/protobuf/: list_purchased.proto  models.proto  service_internal.proto
go/cmd/walletmgr-app-backend/: main.go
go/conn/grpc/: models.pb.go  service_internal.pb.go  service_internal_grpc.pb.go
protobuf/: README.md  models.proto  service_internal.proto  taskfile.yml
python/cmd/walletmgr-app/: __main__.py
python/conn/grpc/: models_pb2.py  models_pb2.pyi  service_internal_pb2.py  service_internal_pb2_grpc.py  service_internal_pb2_grpc.pyi
